lol, fonts are case sensitive
k, here is the site with working font

--- a/CritHit/aboutstyles.css
+++ b/CritHit/aboutstyles.css
@@ -1,7 +1,7 @@
-@font-face 
+﻿@font-face 
 {
     font-family: 'Aaargh';
-    src: url('fonts/aaargh.ttf');
+    src: url('fonts/Aaargh.ttf');
 }
 
 @font-face 
