--- a/CritHit/styles.css
+++ b/CritHit/styles.css
@@ -1,7 +1,7 @@
-@font-face 
+﻿@font-face 
 {
     font-family: 'Aaargh';
-    src: url('fonts/aaargh.ttf');
+    src: url('fonts/Aaargh.ttf');
 }
 
 @font-face 
